feat(core): :sparkles: Embedded SSH server with helpers